--- a/Project 1/style.css
+++ b/Project 1/style.css
@@ -65,7 +65,7 @@ body {
 
 .content__title__inner--offset-1 {
 	line-height: -0.25;
-	left: 30.0vw;
+	left: 36.0vw;
 }
 
 .content--full {
@@ -89,3 +89,43 @@ body {
 	height: 93vh;
 }
 
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
+}
+
+
+/* Page Loader */
+.js .loading::before {
+	content: '';
+	position: fixed;
+	z-index: 100;
+	top: 0;
+	left: 0;
+	display: flex;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: black;
+}
+
+.js .loading::after {
+	content: url("movieReel.png");
+	position: fixed;
+	z-index: 10000;
+	top: 50%;
+	left: 50%;
+	width: 50px;
+	height: 50px;
+	margin: -25px 0 0 -25px;
+	pointer-events: none;
+	background: #000;
+	animation: loaderAnim 0.8s ease-out infinite alternate forwards;
+}
+
+@keyframes loaderAnim {
+	to {
+		transform: translate3d(0,-100px,0);
+	}
+}
